Fixed overlapping text on home page for mobile.

--- a/hugo/themes/mcc-2023/assets/style-2023/scss/30-after-bulma.scss
+++ b/hugo/themes/mcc-2023/assets/style-2023/scss/30-after-bulma.scss
@@ -15,7 +15,7 @@ footer { min-height:3rem; margin-top:6rem !important;
   border-top:1px solid $cs-p30; }
 
 .ws-home-grid {
-  max-height: 32rem; margin-top:1rem;
+  margin-top:1rem;
   & > div { border-top:1px solid #ddd; }
   & > div:nth-child(2) {
     border-left:1px solid #ddd;
